style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}

.container {
  width: 100%;
  max-width: 1440px;
  margin-inline: auto;
  padding-inline: 60px;
}

/* Header Navigation Bar Style */

header .container {
  display: grid;
  grid-template-columns: 20% 60% 20%;
  align-items: center;
  height: 98px;
}

nav ul {
  display: flex;
  justify-content: center;
  gap: 24px;
  align-items: center;
  height: 100%;
  list-style: none;
}

nav ul li a {
  color: #575757;
}

.reg-nav-btn {
  text-align: right;
}

.btn {
  color: white;
  padding: 12px 36px;
  background-color: #1d4ed8;
  font-weight: 700;
  border-radius: 10px;
  border: none;
  font-size: 16px;
  cursor: pointer;
}

.btn:hover {
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
}

.btn.blue-btn:hover {
  border: 2px solid #1d4ed8;
  background-color: white;
  color: #1d4ed8;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
}

/* Hero banner Section Style */
.hero {
  background-image: url(./assets/banner.jpg);
  background-size: cover;
  background-position: center;
  height: 786px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0.75) 0%,
    rgba(0, 0, 0, 0.55) 25%,
    rgba(0, 0, 0, 0.25) 50%,
    rgba(0, 0, 0, 0) 100%
  );
}

.hero-content {
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.hero-content h2 {
  margin-bottom: 16px;
  font-size: 80px;
}

.hero-content p {
  margin-bottom: 278px;
  max-width: 700px;
  font-size: 22px;
  text-align: center;
}

.btn.hero-btn {
  padding: 12px 48px;
  font-size: 24px;
}

/* Meet the Speakers Section Style */
.meet-speakers {
  text-align: center;
  margin: 0 3.47rem 2.69rem 3.47rem;
  padding: 5rem 3.75rem;
}

.meet-speakers h2 {
  font-size: 3.5rem;
}

.speakers-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 2rem;
  padding-top: 3.5rem;
}

.card {
  border: 1px solid #e5e7ebff;
  border-radius: 12px;
  overflow: hidden;
}

.card img {
  width: 100%;
  height: auto;
}

.speaker-info {
  display: flex;
  flex-direction: column;
  text-align: left;
  padding: 1.5rem;
  gap: 0.5rem;
}

.category {
  font-size: 0.75rem;
  color: #2563eb;
  font-weight: 600;
}

.speaker-info h3 {
  font-size: 1.25rem;
  color: #0d1b2a;
  font-weight: 700;
}

.company {
  font-size: 0.88rem;
  color: #575757;
  font-weight: 400;
}

/* Pricing Section Style Start */

.pricing {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  padding: 0px 60px 80px;
}

.pricing-section-header h2 {
  font-size: 3rem;
  font-weight: 700;
  color: #0d1b2aff;
}

.pricing-section-header p {
  padding-top: 12px;
  font-size: 1rem;
  font-weight: 400;
  color: #575757;
}

.pricing-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  padding-top: 3rem;
  gap: 1.5rem;
}

.pricing-card {
  display: flex;
  flex-direction: column;
  border: 1px solid #e5e7eb;
  border-radius: 12px;
  padding: 2rem;
}

.pricing-card-header {
  text-align: left;
  padding-bottom: 20px;
  border-bottom: 1px solid #e5e7ebff;
}

.pricing-category {
  color: #888888;
  font-weight: 600;
  font-size: 13px;
}

.price {
  font-size: 44px;
  font-weight: 700;
  color: #0d1b2aff;
}

.limit {
  color: #888888;
  font-weight: 400;
  font-size: 13px;
}

li::marker {
  color: #2563eb;
}

.feature-list {
  display: flex;
  flex-direction: column;
  text-align: left;
  padding: 20px 0;
  font-size: 14px;
  font-weight: 400;
  row-gap: 10px;
  list-style-position: inside;
}

.btn.secondary-btn {
  padding: 11px 0;
  width: 100%;
  font-size: 14px;
  font-weight: 600;
  color: #2563eb;
  border: 1px solid #2563eb;
  border-radius: 8px;
  background-color: white;
}

.pricing-card.featured {
  border: 1px solid #0d1b2a;
  border-radius: 12px;
  padding: 2rem;
  background-color: #0d1b2a;
}

.featured .pricing-category {
  color: #93c5fd;
}

.featured .price {
  color: white;
}

.featured .limit {
  color: #ffffff80;
}

.featured .pricing-card-header {
  border-bottom: 1px solid #ffffff1a;
}

.featured .feature-list {
  color: #ffffffcc;
}

.btn.pro-btn {
  color: #ffffff;
  border: 1px solid #2563eb;
  border-radius: 8px;
  background-color: #2563eb;
}

.team {
  background-color: #f8f9fbff;
}

.btn.outline-btn {
  color: #0d1b2aff;
  border: 1px solid #0d1b2aff;
  background-color: #f8f9fbff;
}

/*AI Challenge Section  */

.ai-challenge .container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem 1.3rem;
  grid-template-areas:
    "sponsors sponsors"
    "venue faq";
}

.sponsors {
  grid-area: sponsors;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #f4f4f8;
  padding: 1.5rem 2rem;
  border: 1px solid #e5e7eb;
  border-radius: 12px;
}

.section-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.logos {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  padding: 32px 0;
  width: 100%;
}

.logo-item {
  flex: 1;
  height: 60px;
  background: #ffffff;
  border: 1px solid #e5e5ea;
  border-radius: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.logo-item:hover {
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
}

.logo-item img {
  width: auto;
  height: auto;
  max-height: 40px;
}

.venue {
  grid-area: venue;
  /* align-self: self-start; */
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.5rem;
  background-color: #f4f4f8;
  border: 1px solid #e5e7eb;
  border-radius: 12px;
}

.venue .section-header p {
  color: #2563eb;
}

.venue-content {
  display: flex;
  flex: 1;
  gap: 20px;
  padding-top: 1rem;
}

.venue-img,
.venue-info {
  flex: 1 1 50%;
}
.venue-img img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  display: block;
  border-radius: 10px;
}
.venue-info {
  display: flex;
  flex-direction: column;
}

.venue-info p {
  padding-right: 30px;
}

.venue-features {
  padding: 20px 10px 8px 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  justify-self: center;
  list-style: none;
  list-style-position: inside;
}

.venue-features li {
  margin-bottom: 12px;
  color: #575757;
}

.venue-features li i {
  font-size: 0.8rem;
  padding: 3.3px;
  width: 1.5rem;
  color: #2563eb;
  background-color: #e5e4e4;
  border-radius: 4px;
  text-align: center;
}
.venue-info button {
  background-color: #f4f4f8 !important;
}
.faq {
  grid-area: faq;
  padding: 1.5rem;
  background-color: #f4f4f8;
  border: 1px solid #e5e7eb;
  border-radius: 12px;
}

.venue,
.faq {
  margin-bottom: 1rem;
}

.faq-list {
  padding-top: 1rem;
}

details {
  background-color: #f8fafc;
  border: 1px solid #e2e8f0;
  border-radius: 8px;
  margin-bottom: 12px;
  padding: 8px 14px;
  transition:
    background-color 0.3s,
    border-color 0.3s,
    box-shadow 0.3s;
}

details[open] {
  background-color: #ffffff;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
  border-color: #2563eb;
}

details i {
  transition:
    transform 0.3s ease,
    color 0.3s ease;
  color: #64748b;
}

details[open] i {
  transform: rotate(180deg);
  color: #2563eb;
}

.question {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #1e293b;
  user-select: none;
  cursor: pointer;
}

.answer {
  overflow: hidden;
  margin-top: 12px;
  color: #475569;
  line-height: 1.6;
  user-select: none;
}

/* Footer Style */
footer {
  background-color: #0d1b2aff;
}

footer .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 1rem 0;
}

.socials {
  display: flex;
  gap: 3rem;
  padding: 0.75rem;
}
.social-logo {
    cursor: pointer;
}

.footer-divider {
  width: 100%;
  margin-bottom: 0.5rem;
  background-color: #1e293b;
  border: none;
  height: 2px;
}

.copyright {
  color: #888888;
  margin-bottom: 0.5rem;
}

